added getRCConfiguration api spec with definitions
